--- a/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/enk.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/enk.json
@@ -80,6 +80,18 @@
     {
       "loc": "NKS_NOTES_COMMAND_REMOVENOTE_ARGUMENT_NOTENUMBER_DESC",
       "text": "Note number"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_TITLE",
+      "text": "Viewing notes"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_DESC",
+      "text": "Interactive notes viewer"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_BODY",
+      "text": "You can view the notes interactively using the notes TUI. Just select a note and view it. You can also edit, delete, and add notes."
     }
   ]
 }
