--- a/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/ptg.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/ptg.json
@@ -91,6 +91,18 @@
     {
       "loc": "NKS_NOTES_COMMAND_REMOVENOTE_ARGUMENT_NOTENUMBER_DESC",
       "text": "Número da nota"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_TITLE",
+      "text": "Visualizando notas"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_DESC",
+      "text": "Visualizador de notas interativo"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_BODY",
+      "text": "Pode visualizar as notas interativamente utilizando a interface de texto (TUI) de notas. Basta selecionar uma nota e visualizá-la. Também pode editar, eliminar e adicionar notas."
     }
   ]
 }
