--- a/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/ukr.json
@@ -81,6 +81,18 @@
     {
       "loc": "NKS_NOTES_COMMAND_REMOVENOTE_ARGUMENT_NOTENUMBER_DESC",
       "text": "Номер примітки"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_TITLE",
+      "text": "Перегляд нотаток"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_DESC",
+      "text": "Інтерактивний переглядач нотаток"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_BODY",
+      "text": "Ви можете переглядати нотатки інтерактивно за допомогою інтерфейсу користувача нотаток. Просто виберіть нотатку та перегляньте її. Ви також можете редагувати, видаляти та додавати нотатки."
     }
   ]
 }
