--- a/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/Output/Localizations.ar.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/Output/Localizations.ar.resx
@@ -174,5 +174,14 @@
   <data name="NKS_NOTES_COMMAND_REMOVENOTE_ARGUMENT_NOTENUMBER_DESC" xml:space="preserve">
     <value>ملاحظة رقم</value>
   </data>
+  <data name="NKS_NOTES_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>عرض الملاحظات</value>
+  </data>
+  <data name="NKS_NOTES_TUI_HELP01_DESC" xml:space="preserve">
+    <value>عارض الملاحظات التفاعلي</value>
+  </data>
+  <data name="NKS_NOTES_TUI_HELP01_BODY" xml:space="preserve">
+    <value>يمكنك عرض الملاحظات بشكل تفاعلي باستخدام واجهة المستخدم التفاعلية للملاحظات. ما عليك سوى اختيار ملاحظة وعرضها. كما يمكنك تعديلها وحذفها وإضافتها.</value>
+  </data>
 
 </root>
