--- a/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/Output/Localizations.fr.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/Output/Localizations.fr.resx
@@ -174,5 +174,14 @@
   <data name="NKS_NOTES_COMMAND_REMOVENOTE_ARGUMENT_NOTENUMBER_DESC" xml:space="preserve">
     <value>Numéro de note</value>
   </data>
+  <data name="NKS_NOTES_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Consultation des notes</value>
+  </data>
+  <data name="NKS_NOTES_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Visionneuse de notes interactive</value>
+  </data>
+  <data name="NKS_NOTES_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Vous pouvez consulter vos notes de manière interactive grâce à l&apos;interface utilisateur des notes. Il vous suffit de sélectionner une note pour la visualiser. Vous pouvez également la modifier, la supprimer et en ajouter.</value>
+  </data>
 
 </root>
