--- a/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/Output/Localizations.la.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/Output/Localizations.la.resx
@@ -174,5 +174,14 @@
   <data name="NKS_NOTES_COMMAND_REMOVENOTE_ARGUMENT_NOTENUMBER_DESC" xml:space="preserve">
     <value>Nota numerum</value>
   </data>
+  <data name="NKS_NOTES_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Annotationes inspiciendae</value>
+  </data>
+  <data name="NKS_NOTES_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Inspicitorium annotationum interactivum</value>
+  </data>
+  <data name="NKS_NOTES_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Notas interactive inspicere potes utens interfacie usoris annotationum. Notam tantum elige et inspice. Notas etiam recensere, delere et addere potes.</value>
+  </data>
 
 </root>
