--- a/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/Output/Localizations.nb.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/Output/Localizations.nb.resx
@@ -174,5 +174,14 @@
   <data name="NKS_NOTES_COMMAND_REMOVENOTE_ARGUMENT_NOTENUMBER_DESC" xml:space="preserve">
     <value>Merk nummer</value>
   </data>
+  <data name="NKS_NOTES_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Vise notater</value>
+  </data>
+  <data name="NKS_NOTES_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Interaktiv notatvisning</value>
+  </data>
+  <data name="NKS_NOTES_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Du kan vise notatene interaktivt ved hjelp av notat-TUI-en. Bare velg et notat og vis det. Du kan også redigere, slette og legge til notater.</value>
+  </data>
 
 </root>
