--- a/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/ger.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/ger.json
@@ -90,6 +90,18 @@
     {
       "loc": "NKS_NOTES_COMMAND_REMOVENOTE_ARGUMENT_NOTENUMBER_DESC",
       "text": "Notiznummer"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_TITLE",
+      "text": "Notizen anzeigen"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_DESC",
+      "text": "Interaktiver Notizen-Viewer"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_BODY",
+      "text": "Sie können Ihre Notizen interaktiv mit der Notizen-Benutzeroberfläche anzeigen. Wählen Sie einfach eine Notiz aus, um sie anzuzeigen. Sie können Notizen auch bearbeiten, löschen und hinzufügen."
     }
   ]
 }
