--- a/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/grk.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/grk.json
@@ -82,6 +82,18 @@
     {
       "loc": "NKS_NOTES_COMMAND_REMOVENOTE_ARGUMENT_NOTENUMBER_DESC",
       "text": "Αριθμός σημείωσης"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_TITLE",
+      "text": "Προβολή σημειώσεων"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_DESC",
+      "text": "Διαδραστικό πρόγραμμα προβολής σημειώσεων"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_BODY",
+      "text": "Μπορείτε να δείτε τις σημειώσεις διαδραστικά χρησιμοποιώντας το TUI σημειώσεων. Απλώς επιλέξτε μια σημείωση και προβάλετέ την. Μπορείτε επίσης να επεξεργαστείτε, να διαγράψετε και να προσθέσετε σημειώσεις."
     }
   ]
 }
