--- a/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/ind-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/ind-T.json
@@ -81,6 +81,18 @@
     {
       "loc": "NKS_NOTES_COMMAND_REMOVENOTE_ARGUMENT_NOTENUMBER_DESC",
       "text": "नोट संख्या"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_TITLE",
+      "text": "नोट्स देखना"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_DESC",
+      "text": "इंटरैक्टिव नोट्स व्यूअर"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_BODY",
+      "text": "आप नोट्स TUI का इस्तेमाल करके नोट्स को इंटरैक्टिव तरीके से देख सकते हैं। बस एक नोट चुनें और उसे देखें। आप नोट्स को एडिट, डिलीट और जोड़ भी सकते हैं।"
     }
   ]
 }
