--- a/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/iri.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/iri.json
@@ -82,6 +82,18 @@
     {
       "loc": "NKS_NOTES_COMMAND_REMOVENOTE_ARGUMENT_NOTENUMBER_DESC",
       "text": "Uimhir nóta"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_TITLE",
+      "text": "Nótaí á n-amharc"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_DESC",
+      "text": "Breathnóir nótaí idirghníomhach"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_BODY",
+      "text": "Is féidir leat na nótaí a fheiceáil go hidirghníomhach ag baint úsáide as TUI na nótaí. Roghnaigh nóta agus féach air. Is féidir leat nótaí a chur in eagar, a scriosadh agus a chur leis freisin."
     }
   ]
 }
