--- a/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/kor-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/kor-T.json
@@ -82,6 +82,18 @@
     {
       "loc": "NKS_NOTES_COMMAND_REMOVENOTE_ARGUMENT_NOTENUMBER_DESC",
       "text": "노트 번호"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_TITLE",
+      "text": "메모 보기"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_DESC",
+      "text": "대화형 메모 뷰어"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_BODY",
+      "text": "노트 TUI를 사용하여 메모를 대화형으로 볼 수 있습니다. 메모를 선택하여 보기만 하면 됩니다. 메모를 편집, 삭제, 추가할 수도 있습니다."
     }
   ]
 }
