--- a/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/rmn.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/rmn.json
@@ -82,6 +82,18 @@
     {
       "loc": "NKS_NOTES_COMMAND_REMOVENOTE_ARGUMENT_NOTENUMBER_DESC",
       "text": "Notă numărul"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_TITLE",
+      "text": "Vizualizarea notelor"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_DESC",
+      "text": "Vizualizator interactiv de note"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_BODY",
+      "text": "Puteți vizualiza notele interactiv utilizând interfața interfață TUI pentru notițe. Trebuie doar să selectați o notă și să o vizualizați. De asemenea, puteți edita, șterge și adăuga note."
     }
   ]
 }
