--- a/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/spa.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Notes/Resources/Languages/spa.json
@@ -106,6 +106,18 @@
     {
       "loc": "NKS_NOTES_COMMAND_REMOVENOTE_ARGUMENT_NOTENUMBER_DESC",
       "text": "Número de nota"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_TITLE",
+      "text": "Visualización de notas"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_DESC",
+      "text": "Visor interactivo de notas"
+    },
+    {
+      "loc": "NKS_NOTES_TUI_HELP01_BODY",
+      "text": "Puedes ver las notas de forma interactiva mediante la interfaz de usuario de notas. Solo tienes que seleccionar una nota y visualizarla. También puedes editarla, eliminarla y añadirla."
     }
   ]
 }
